--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#45C5E4">
 
     <LinearLayout
+        android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -20,7 +22,7 @@
             android:textSize="40sp"
             android:textStyle="bold"
             android:layout_gravity="center_horizontal"
-            android:fontFamily="sans-serif"/>
+            android:fontFamily="sans-serif" />
 
         <!-- Hire Me Text -->
         <TextView
@@ -33,15 +35,16 @@
             android:textStyle="italic"
             android:layout_marginBottom="30dp"
             android:layout_gravity="center_horizontal"
-            android:fontFamily="sans-serif"/>
+            android:fontFamily="sans-serif" />
 
         <!-- Find a Job Card -->
         <androidx.cardview.widget.CardView
+            android:id="@+id/findJobLayout"
             android:layout_width="match_parent"
             android:layout_height="150dp"
             android:layout_marginBottom="20dp"
-            android:cardCornerRadius="25dp"
-            android:cardElevation="6dp"
+            app:cardCornerRadius="25dp"
+            app:cardElevation="6dp"
             android:background="@android:color/white">
 
             <RelativeLayout
@@ -58,7 +61,7 @@
                     android:textStyle="bold"
                     android:textColor="#000000"
                     android:layout_alignParentStart="true"
-                    android:layout_centerVertical="true"/>
+                    android:layout_centerVertical="true" />
 
                 <ImageView
                     android:id="@+id/findJobImage"
@@ -72,10 +75,11 @@
 
         <!-- Give a Job Card -->
         <androidx.cardview.widget.CardView
+            android:id="@+id/giveJobLayout"
             android:layout_width="match_parent"
             android:layout_height="150dp"
-            android:cardCornerRadius="25dp"
-            android:cardElevation="6dp"
+            app:cardCornerRadius="25dp"
+            app:cardElevation="6dp"
             android:background="@android:color/white">
 
             <RelativeLayout
@@ -92,7 +96,7 @@
                     android:textStyle="bold"
                     android:textColor="#000000"
                     android:layout_alignParentStart="true"
-                    android:layout_centerVertical="true"/>
+                    android:layout_centerVertical="true" />
 
                 <ImageView
                     android:id="@+id/giveJobImage"
