JobFinder_Registration&Forget_Password

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,13 @@
     <color name="white">#FFFFFFFF</color>
     <color name="transparent">#00000000</color>
 
+        <!-- Existing colors -->
+        <color name="purple_500">#6200EE</color>
+
+        <!-- Optional: other Material Design colors -->
+        <color name="purple_700">#3700B3</color>
+        <color name="teal_200">#03DAC5</color>
+        <color name="teal_700">#018786</color>
+
+
 </resources>
